sample/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-echo-go
spec:
  selector:
    app: my-echo-go
  ports:
    - protocol: TCP
      port: 80
#      port: 443
      targetPort: 8080
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-echo-go
  labels:
    app: my-echo-go
spec:
  selector:
    matchLabels:
      app: my-echo-go
  replicas: 1
  template:
    metadata:
      labels:
        app: my-echo-go
    spec:
      containers:
        - image: azssi/my-echo-go
          name: echo-server
          imagePullPolicy: Always
#          env:
#            - name: CERT_PATH
#              value: "/tmp/tls.crt"
#            - name: PRIVATE_KEY_PATH
#              value: "/tmp/tls.key"
          ports:
            - containerPort: 8080
#          volumeMounts:
#            - name: cert
#              mountPath: /tmp/tls.crt
#              subPath: tls.crt
#            - name: cert
#              mountPath: /tmp/tls.key
#              subPath: tls.key
#      volumes:
#        - name: cert
#          secret:
#            secretName: my-echo-go-secret
